[package]
name = "ipp-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
ippper = "0.3.0"
tokio = { version = "1.40.0", features = ["fs"] }
tokio-util = "0.7.12"
uuid = "1.10.0"
printers = "2.0.0"
log = "0.4.22"
